--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
+
+*{
+        font-family: Mulish;
+}
+
 .body{
     background-image: url(./images/bg1.svg);
     background-repeat: no-repeat;
@@ -14,9 +20,7 @@
 .signup{
     box-shadow: 0px 6px 8px 0px #0000000D;
 }
-.success-text{
-    color: #625BF7;
-}
+
 .profile{
     font-size: 300%;
 }
